# veildaemon

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CNAME  LICENSE  LICENSE_SCOPE.md  NAV.md  README.md  README_DEPLOY.md  README_migration.md  SECURITY.md  TODO.md  VeilDaemon_Launcher.bat  auto_train_loop.py  captioned_channels.json  catalogs.js  cell-sync.js  cleanup.py  core_context.py  daemon_brain.py  daemon_shell.py  daemon_tts.py  discover_captioned_channels.py  edge_tts_test.py  event_bus.py  glyph_engine.py  glyph_logic.py  hrm_engine.py  hrm_shadow_miner.py  hrm_training_examples.smoke.yaml  hrm_training_examples.yaml  index.html  installer.bat  journal_manager.py  knowledge_store.py  migrate_secrets.py  (+42 more)
.codex/: hooks.json
.githooks/: pre-commit
Docs/: DESIGN_CONSTRAINTS.md  FIELD ORIENTATION FRAGMENT - SURVIVAL CONDITIONS.md  PRESENTATION_ACCESS_TIERS.md  VEILBORN SURVIVAL - ZONE ENTRY SAFETY FRAGMENT.md  dev-tools.md  manifesto.md  needlepoint-json-generation-guide.md  plugin-spec.md  release-v0.0.3.md  system-method.md
Graveyard/: VeilDaemon_Launcher.bat  (+5 more)
veildaemon/: __init__.py  __main__.py  pyproject.toml
veildaemon/apps/: __init__.py
veildaemon/apps/api/: __init__.py  wick_api_adapter.py  wick_db.py  wick_obsidian.py  wick_tracker.py
veildaemon/apps/bus/: __init__.py  event_bus.py
veildaemon/apps/hrm/: __init__.py  core_context.py
veildaemon/apps/memory/: __init__.py  glyph_engine.py  glyph_logic.py  journal_manager.py  knowledge_store.py  task_store.py  task_store_sqlite.py
veildaemon/apps/orchestrator/: __init__.py  brain.py  chat_bound.py  shell.py
veildaemon/apps/packs/: __init__.py  pack_loader.py  packs_integration.py
veildaemon/apps/safety/: __init__.py  normalize.py  quip_bank.py  rewrite.py  span_map.py
veildaemon/apps/stage/: __init__.py  schema_guard.py  stage_director.py  stream_convo_engine.py  veil_daemon_chat_bound.py
veildaemon/apps/voice/: __init__.py  whisper_trigger.py
veildaemon/apps/watchers/: __init__.py  discover_captioned_channels.py  twitch_auth.py  twitch_chat_watcher.py  twitch_chat_watcher_impl.py  twitch_multi_watcher.py  twitch_to_shadow.py  twitch_vtt_watcher.py
veildaemon/event_bus/: __init__.py
veildaemon/hrm/: __init__.py  engine.py  shadow_miner.py
veildaemon/persona/: __init__.py  journal_manager.py  knowledge_store.py  task_store.py  task_store_sqlite.py
veildaemon/safety/: __init__.py  normalize.py  quip_bank.py  rewrite.py  span_map.py
veildaemon/scenes/: __init__.py
veildaemon/stage_director/: __init__.py  schema_guard.py
veildaemon/tests/: test_imports.py  test_smoke.py
veildaemon/tts/: __init__.py  handles.py  manager.py  wps_meter.py
(+434 files in other folders)
